<resources>
    <string name="app_name">Food Delivery</string>
    <string name="waves_of_food">Waves Of Food</string>
    <string name="deliever_favorite_food">Deliever Favorite Food</string>
    <string name="design_by_nneatroots">Design By \nNeatRoots</string>
    <string name="enjoy_restaurant_quality_meals_nat_home">Enjoy Restaurant Quality Meals \nat Home</string>
    <string name="next">Next</string>
    <string name="deliver_favorite_food">Deliver Favorite Food</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="email_or_phone_number">Email or Phone Number</string>
    <string name="password">Password</string>
    <string name="or_ncontinue_with">Or \nContinue With</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="don_t_have_account">Don’t Have Account?</string>
    <string name="login">Login</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="or_nsign_up_with">Or \nSign Up With</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="choose_your_location">Choose Your Location</string>
    <string name="location_activity_text">To provide you with the best dining experience, we need your permission to access your device\'s location. By enabling location services, we can offer personalized restaurant recommendations, accurate delivery estimates, and ensure a seamless food delivery experience.</string>
    <string name="choose_location">Choose Location</string>
    <string name="choose_your_location_locationActivity">Choose Your Location</string>
    <string name="selected_country">Are you sure that you want to continue with the selected country?</string>
    <string name="btn_yes">Yes</string>
    <string name="byn_cancel">Cancel</string>
    <string name="explore_your_favorite_food">Explore Your Favorite Food</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="popular">Popular</string>
    <string name="view_menu">View Menu</string>
    <string name="herbal_pancake">Herbal Pancake</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="food_name">Food Name</string>
    <string name="short_description">Short description</string>
    <string name="ingredients">ingredients</string>
    <string name="add_to_chart">Add To Chart</string>
    <string name="menu">Menu</string>
    <string name="what_do_you_want_to_order">What do you want to order?</string>
</resources>