<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.locationactivity.LocationActivity">

    <TextView
        android:id="@+id/choose_your_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_your_location"
        android:textSize="25sp"
        android:fontFamily="@font/yeonsung"
        android:layout_marginTop="103dp"
        android:layout_marginStart="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="5dp"
        app:boxStrokeWidthFocused="0dp"
        app:boxStrokeWidth="0dp"
        app:endIconDrawable="@drawable/arrow_down"
        app:layout_constraintTop_toBottomOf="@id/choose_your_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <AutoCompleteTextView
            android:id="@+id/location_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/choose_location"
            android:paddingStart="16dp"
            android:paddingEnd="235dp"
            android:textSize="14sp"
            android:fontFamily="@font/lato"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="337dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="33dp"

        android:textSize="16sp"
        android:fontFamily="@font/lato"
        android:gravity="top"
        android:lineSpacingExtra="2sp"
        android:translationY="-0.88sp"
        android:text="@string/location_activity_text"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/yeonsung"
        android:lineSpacingExtra="3sp"
        android:text="@string/design_by_nneatroots"
        android:textColor="@color/end_green_color"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>