<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.splashactivity.SplashActivity">


    <ImageView
        android:id="@+id/im_logo"
        android:layout_width="185dp"
        android:layout_height="189dp"
        app:srcCompat="@drawable/logo"
        android:layout_marginTop="155dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    
    <TextView
        android:id="@+id/splash_title"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="53dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/im_logo"
        android:text="@string/waves_of_food"
        android:textSize="40sp"
        android:fontFamily="@font/yeonsung" />

    <TextView
        android:id="@+id/splash_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/lato"
        android:text="@string/deliever_favorite_food"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splash_title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/design_by_nneatroots"
        android:layout_marginBottom="32dp"
        android:textColor="@color/start_green_color"
        android:fontFamily="@font/yeonsung"
        android:textSize="16sp"
        android:textStyle="bold"
        android:lineSpacingExtra="3sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>