<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.startactivity.StartActivity">


    <ImageView
        android:id="@+id/im_burger"
        android:layout_width="333dp"
        android:layout_height="312dp"
        app:layout_goneMarginTop="98dp"
        app:srcCompat="@drawable/burgerr"
        android:layout_marginTop="98dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/enjoy_restaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enjoy_restaurant_quality_meals_nat_home"
        android:gravity="center_horizontal|top"
        android:layout_marginTop="29dp"
        android:textSize="20sp"
        android:fontFamily="@font/yeonsung"
        android:textColor="@color/start_green_color"
        app:layout_constraintTop_toBottomOf="@id/im_burger"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/go_user_login_bt"
        android:layout_width="157dp"
        android:layout_height="57dp"
        android:layout_marginTop="162dp"
        android:background="@drawable/green_btn"
        android:fontFamily="@font/yeonsung"
        android:paddingTop="16dp"
        android:paddingBottom="15dp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enjoy_restaurant" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/yeonsung"
        android:lineSpacingExtra="3sp"
        android:text="@string/design_by_nneatroots"
        android:textColor="@color/end_green_color"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>