<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >


    
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/bottom_sheet_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="31dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/short_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/short_description"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/yeonsung"
        android:layout_marginTop="29dp"
        app:layout_constraintTop_toBottomOf="@id/bottom_sheet_recyclerView"
        app:layout_constraintStart_toStartOf="@id/bottom_sheet_recyclerView"
        />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/yeonsung"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/short_des"
        app:layout_constraintTop_toBottomOf="@id/short_des"
        android:text="Lorem ipsum dolor sit amet,
        \nconsectetur adipiscing elit, \nsed do eiusmod tempor incididunt
        \nut labore et dolore magna aliqua. Ut enim ad " />

    <TextView
        android:id="@+id/ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredients"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/yeonsung"
        android:layout_marginTop="29dp"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintStart_toStartOf="@id/description"/>

    <TextView
        android:id="@+id/list_ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Strowberry \nCream \nWheat"
        android:fontFamily="@font/lato"
        android:textSize="12sp"
        android:lineSpacingExtra="7sp"
        app:layout_constraintTop_toBottomOf="@id/ingredients"
        app:layout_constraintStart_toStartOf="@id/ingredients"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:text="@string/add_to_chart"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_marginTop="30dp"
        android:elevation="50dp"
        android:shadowColor="@color/ed_shadow_color"
        android:background="@drawable/green_btn"
        app:layout_constraintTop_toBottomOf="@id/list_ingredients"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>